opam-version: "2.0"
synopsis: "OCaml bindings for Google's LevelDB library"
description: """
These bindings expose nearly the full LevelDB C++ API, including:

* iterators
* snapshots
* batch updates
* support for custom comparators

Blocking functions release the OCaml runtime system, allowing to:

* run them in parallel with other OCaml code
* perform multiple LevelDB operations in parallel"""
author: "mfp@acm.org"
maintainer: "mfp@acm.org"
homepage: "https://github.com/mfp/ocaml-leveldb"
license: "LGPL+static"
doc: ["https://github.com/mfp/ocaml-leveldb/blob/master/README.md"]
dev-repo: "git://github.com/mfp/ocaml-leveldb"
bug-reports: "https://github.com/mfp/ocaml-leveldb/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>= "2.0"}
  "ounit2" {with-test}
  "odoc" {with-doc}
  "conf-leveldb"
]
depexts: [
  [["debian"] ["libsnappy-dev"]]
  [["debian"] ["libleveldb-dev"]]
  [["ubuntu"] ["libsnappy-dev"]]
]
